--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
-    "elysia": "latest"
+    "@elysiajs/eden": "^1.1.1",
+    "elysia": "^1.1.3"
   },
   "devDependencies": {
     "bun-types": "latest"
