--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
-    "elysia": "latest"
+    "@elysiajs/cors": "^1.1.0",
+    "@elysiajs/swagger": "^1.1.0",
+    "cors": "^2.8.5",
+    "elysia": "latest",
+    "openapi": "^1.0.1",
+    "serpapi": "^2.1.0",
+    "swagger": "^0.7.5"
   },
   "devDependencies": {
     "bun-types": "latest"
