--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   },
   "dependencies": {
     "@elysiajs/eden": "^1.1.1",
-    "elysia": "^1.1.3"
+    "@elysiajs/swagger": "^1.1.0",
+    "elysia": "^1.1.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "bun-types": "latest"
